{
    "app_title": "To-do list",
    "title": "My to-do",
    "done": "Done",
    "no_tasks": "No tasks",
    "no_undone_tasks": "All tasks completed",
    "save": "Save",
    "delete": "Delete",
    "importance": "Importance",
    "do_until": "Do until",
    "what_do": "What need to do",
    "importance_no": "No",
    "importance_low": "Low",
    "importance_high": "High",
    "warning_description": "Enter a description of the task",
    "ok": "OK",
    "new_task": "New",
    "language": "English",
    "language_en": "English",
    "has_interner_title": "Internet connected",
    "has_interner_text": "Upload all local changes to the server?",
    "yes": "Yes",
    "no": "No",
    "no_interner_title": "No internet",
    "no_interner_text": "All updates will be saved locally until the internet is available",
    "language_setting": "Language",
    "theme_setting": "Theme",
    "dark_theme": "Dark",
    "light_theme": "Light"
}